# ml-from-zero

./: .yapfignore  README.md  main.py  package.json  pyproject.toml  pyrightconfig.json
deep_learning/: activation_function.py  error_functions.py  perceptron.py  sample_network.py
