[tool.poetry]
name = "ml-from-zero"
version = "0.1.0"
description = ""
authors = ["kazchimo <pharcydetip@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
